Theoretical background added

--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -5,14 +5,85 @@
    "metadata": {},
    "source": [
     "## Perceptron\n",
-    "### **m** input features and **n** output results"
+    "### Theoretical background\n",
+    "\n",
+    "One of the most important models still in use today is the so-called perceptron, whose potential is defined as the weighted sum of incoming signals. If this internal potential of the neuron exceeds its threshold value (defined in our case by the symbol $ϑ$), the neuron is excited to a value of $1$. Otherwise, the neuron is inhibited, which is represented by a value of $0$. Mathematically, this process can be expressed using the signum function in this way:\n",
+    "\n",
+    "$$\n",
+    "y = \\text{Sgn}\\left(\\sum_{i=1}^n w_i x_i - \\theta\\right),\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\text{Sgn}(x) = \\begin{cases} \n",
+    "1 & \\text{if } x > 0, \\\\\n",
+    "0 & \\text{if } x \\leq 0.\n",
+    "\\end{cases}\n",
+    "$$\n",
+    "\n",
+    "By introducing a constant neuron at the input with an excitation state of $x_0 = 1$ and a connection to our neuron $w_0 = -θ$ the previous can be simplified as follows:\n",
+    "\n",
+    "$$\n",
+    "y = \\text{Sgn}\\left(\\sum_{i=0}^n w_i x_i\\right).\n",
+    "$$\n",
+    "\n",
+    "**Perceptron learning (Hebb)**\n",
+    "1. Initialization of weights and threshold with random small numbers\n",
+    "   $$w_i(t), (0 \\leq i \\leq n) \\text{ is the weight of input } i \\text{ at time } t.$$\n",
+    "\n",
+    "2. Presentation of the input and the desired output from the training set\n",
+    "   $$(x_0, x_1, \\ldots, x_n) \\rightarrow d(t).$$\n",
+    "\n",
+    "3. Determination of the actual response\n",
+    "   $$y(t) = \\text{Sgn}\\left(\\sum_{i=0}^n w_i(t)x_i(t)\\right).$$\n",
+    "\n",
+    "4. Weight Adaptation\n",
+    "   - If the output is correct: $w_i(t+1) = w_i(t)$,\n",
+    "   - If the output is 0 and should have been 1: $w_i(t+1) = w_i(t) + x_i(t)$,\n",
+    "   - If the output is 1 and should have been 0: $w_i(t+1) = w_i(t) - x_i(t)$.\n",
+    "\n",
+    "This last step of the algorithm can be modified using a multiplicative factor, which can change the magnitude of changes in adapted weights as follows:\n",
+    "\n",
+    "4. Weight adaptation with the learning rate\n",
+    "   - If the output is correct: $w_i(t+1) = w_i(t)$,\n",
+    "   - If the output is 0 and should have been 1: $w_i(t+1) = w_i(t) + \\eta x_i(t)$,\n",
+    "   - If the output is 1 and should have been 0: $w_i(t+1) = w_i(t) - \\eta x_i(t)$,\n",
+    "   \n",
+    "where $0 \\leq \\eta \\leq 1$ is the learning rate affecting the adaptation process.\n",
+    "\n",
+    "If an error of response $\\Delta$ is introduced as defined by the difference between the desired and actual outputs:\n",
+    "$$\n",
+    "\\Delta = d(t) - y(t),\n",
+    "$$\n",
+    "\n",
+    "then we can generalize the weight adaptation by the following prescription:\n",
+    "\n",
+    "4. Weight Adaptation with the error of response\n",
+    "$$\n",
+    "\\Delta = d(t) - y(t),\n",
+    "$$\n",
+    "$$\n",
+    "w_i(t+1) = w_i(t) + \\eta \\Delta x_i(t).\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Import modules"
+    "### Implemenation in Python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Import modules**"
    ]
   },
   {
@@ -35,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define training set for wines evaluation\n",
+    "**Define training set for wines evaluation**\n",
     "* Feature 1: sweetness of the wine\n",
     "* Feature 2: acidity of the wine\n",
     "* Feature 3: power of wine\n",
@@ -60,7 +131,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Perceptron learning\n"
+    "**Perceptron learning**"
    ]
   },
   {
@@ -95,7 +166,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define input vector and run perceptron"
+    "**Define input vector and run perceptron**"
    ]
   },
   {
@@ -126,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Save weight matrix on the disk"
+    "**Save weight matrix on the disk**"
    ]
   },
   {
@@ -147,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create new perceptron net a set its weights from disk"
+    "**Create new perceptron net a set its weights from disk**"
    ]
   },
   {
@@ -182,14 +253,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Using Excel Table to define training set"
+    "**Using Excel Table to define training set**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wines Excel file"
+    "**Wines Excel file**"
    ]
   },
   {
@@ -230,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Diagnosis learning verification\n",
+    "**Diagnosis learning verification**\n",
     "\n",
     "Training set consist of several patients, where symptoms are associates with diagnosis. The goal is to learn from this examples."
    ]
@@ -283,7 +354,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Usage of diagnosis app\n",
+    "**Usage of diagnosis app**\n",
+    "\n",
     "Input data are read from excel file and diagosis is inferred from the learnt net o perceptrons."
    ]
   },
@@ -450,7 +522,7 @@
     "collapsed": false
    },
    "source": [
-    "### Mean squared error for the training set"
+    "**Mean squared error for the training set**"
    ]
   },
   {
