Image of the recognition added

--- a/perceptron.ipynb
+++ b/perceptron.ipynb
@@ -28,6 +28,22 @@
     "y = \\text{Sgn}\\left(\\sum_{i=0}^n w_i x_i\\right).\n",
     "$$\n",
     "\n",
+    "If we analyze the expression in the parentheses such that we set it equal to zero, we obtain the equation of a hyperplane (in the two-dimensional case represented by a line). Thus, using vector notation:\n",
+    "$$\n",
+    "\\sum_{i=0}^n w_ix_i = \\mathbf{W} \\cdot \\mathbf{X},\n",
+    "$$\n",
+    "$$\n",
+    "\\mathbf{W} \\cdot \\mathbf{X} = 0.\n",
+    "$$\n",
+    "\n",
+    "This plane divides the input space into two half-spaces (see figure). In other words, we are able to use the perceptron to distinguish two classes of inputs. One of them corresponds to an excitation equal to the value 1 and the other to inhibition of the neuron given the value 0. Values $x_1$ and $x_2$ are inputs from the interval $[0, 1]$.\n",
+    "\n",
+    "<div style=\"text-align: center;\">\n",
+    "    <img src=\"perceptron_recognition.png\" alt=\"Perceptron Recognition\" style=\"width: 50%;\">\n",
+    "</div>\n",
+    "\n",
+    "The question now is how to determine the values of the neuron's weights so that it can correctly recognize (assign to classes) the presented inputs. To achieve this, it is necessary to adapt our perceptron based on a training set through some algorithm. One of the most well-known principles is the adaptation (learning) of the neuron according to Hebb's rule.\n",
+    "\n",
     "**Perceptron learning (Hebb)**\n",
     "1. Initialization of weights and threshold with random small numbers\n",
     "   $$w_i(t), (0 \\leq i \\leq n) \\text{ is the weight of input } i \\text{ at time } t.$$\n",
